app1/manifests/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: NodePort
  selector:
    app: hash
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
