app1/manifests/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashgenerator-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 80
